# CodexPanel

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.en.md  README.md  app.go  assets.go  assets_test.go  config.go  config_test.go  go.mod  log.go  main.go  package-lock.json  package.json  process_unix.go  process_windows.go  server.js  sidecar.go  updater.go  updater_proxy_default.go  updater_proxy_windows.go  updater_test.go  wails.json
.github/workflows/: windows-release.yml
cloudflare/: relay-worker.mjs  wrangler.toml.example
cloudflare/pages/: wrangler.toml.example
docs/: Codex调用文档.md  DEVELOPMENT_PROGRESS.md  TAURI2_WINDOWS_SUPPORT.md  UBUNTU_DEVELOPMENT.md  cloudflare-relay.md
public/: control.html  index.html  manifest.webmanifest
scripts/: build-tauri-sidecar-linux.sh  build-tauri-sidecar.js  build-tauri-sidecar.ps1  build-wails-sidecar.js  build-windows-installer.ps1  check-codex-services.ps1  codex-window-point.swift  install-local-launchagents.sh  run-tauri-linux.sh  run-tauri-windows.ps1  run-tauri.js  run-wails.js  setup-ubuntu-dev.sh  start-windows-codex.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: control-service.toml
src-tauri/src/: main.rs
windows/: node-sidecar.js
